<resources>
    <!-- ================================ APP -->
    <string name="version">1.0.0</string>
    <string name="app_name">DCS</string>
    <string name="service_notification">Realtime audio service</string>

    <!-- ============================= ACTIVITIES -->
    <string name="maps_activity">Location</string>
    <string name="dcs_list_activity">DCS List</string>
    <string name="dsp_activity">DSP</string>
    <string name="dcs_activity">DCS Details</string>
    <string name="message_list_activity">Message List</string>
    <string name="message_activity">Message</string>g>
    <string name="surface_activity">Communication</string>
    <string name="settings_activity">Settings</string>
    <string name="web_activity">Information</string>
    <string name="share_activity">Share</string>

    <!-- ==================== MENU ITEMS NOT CHANGING ACTIVITY -->
    <string name="mute_menu">Mute</string>
    <string name="passThrough_menu">In->Out</string>
    <string name="filter_menu">Filter</string>

    <!-- ============================== DIALOGS -->
    <!-- Dialog Buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="more">More</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about">DCS by K Ring Technologies Ltd. Version</string>

    <!-- Share -->
    <string name="share_title">Sharing</string>
    <string name="share">Nothing has been processed to share</string>
    <string name="share_wait">Processing to share so try later</string>

    <!-- Needs Microphone -->
    <string name="mic_title">Microphone</string>
    <string name="mic">This feature needs permission to record which was not granted</string>
    <string name="mic_more">This permission maybe reset in Settings > Apps > DCS >
        Permissions > Reset Permissions and restarting the app</string>

    <!-- =========================== PREFS -->
    <!-- Preference Titles -->
    <string name="mic_header">Audio</string>
    <string name="joystick_header">Joystick</string>

    <string name="sync_header">Sync</string>

    <!-- Mic Preferences -->
    <string name="mic_gains">Microphone level</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
