<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_action_messages"
            android:icon="@drawable/ic_notify"
            app:showAsAction="ifRoom|withText"
            android:onClick="onShowMessagesAction"
            android:title="@string/message_list_activity">
    </item>
    <item
            android:id="@+id/menu_action_communicate"
            android:icon="@drawable/ic_screen"
            app:showAsAction="ifRoom|withText"
            android:onClick="onShowCommunicateAction"
            android:title="@string/surface_activity">
    </item>
    <item
            android:id="@+id/menu_action_dsp"
            android:icon="@drawable/ic_filter"
            app:showAsAction="ifRoom|withText"
            android:onClick="onShowDSPAction"
            android:title="@string/dsp_activity">
    </item>
    <item
            android:id="@+id/menu_action_settings"
            android:icon="@drawable/ic_settings"
            app:showAsAction="ifRoom|withText"
            android:onClick="onShowSettingsAction"
            android:title="@string/settings_activity">
    </item>
    <item
            android:id="@+id/menu_action_about"
            android:icon="@drawable/ic_about"
            app:showAsAction="ifRoom|withText"
            android:onClick="onShowAboutAction"
            android:title="@string/about_title">
    </item>
</menu>